crates/biome_cli/tests/snapshots/main_commands_init/does_not_create_config_file_if_jsonc_exists.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome init
```

## `biome.jsonc`

```json
{}
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × It seems that a configuration file already exists
  


```
