crates/biome_cli/tests/snapshots/main_commands_init/enables_vcs_with_git_flag.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome init --git
```

## `biome.json`

```json
{
  "$schema": "https://biomejs.dev/schemas/0.0.0/schema.json",
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": true
  },
  "files": {
    "ignoreUnknown": false
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "tab"
  },
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended"
    }
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  },
  "assist": {
    "enabled": true,
    "actions": {
      "source": {
        "organizeImports": "on"
      }
    }
  }
}
```

# Emitted Messages

```block
                       ▄
                      ▄██
                     ▄████
                    ▄██████
                   ▄████████
                  ▄██████████
                 ▄████████████
                ▄██████████████
               ▄████████████████                  ██████▄
              ▄██████████████████                 ██   ██  ▄▄
              ▀▀▀       ▀▀▀▀██████                ██   ██      ▄██████▄  ██▄    ▄██   ▄██████▄
                             ██████               ██████▀  ██  ██    ██  ██ █  █ ██  ██      ██
              ▄▄▄▄████▄▄▄    ███████              ██   ██  ██  ██    ██  ██  ██  ██  ██▀▀▀▀▀▀▀▀
          ▄▄█████████████   █████████             ██   ██  ██  ██    ██  ██      ██  ██
        ▄███████████████    ██████████            ██████▀  ██  ▀██████▀  ██      ██   ▀██████▀
      ▄█████████████████   ▄███████████
     ███████████▀▀▀▀▀▀▀▀   █████████████            T O O L C H A I N   O F   T H E   W E B
   ▄█████████▀             ██████████████
  ▄████████▀     ▄▄▄▄▄▄▄  ████████████████
  ████████    ▄▄███████████████████████████
 ████████▄   ▄██████████████████████████████
 ████████████████████████████████████████████
 █████████████████████████████████████████████
 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀

```

```block
init ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Welcome to Biome! Let's get you started...
    
    Files created 
    
      - biome.json
        Your project configuration. See https://biomejs.dev/reference/configuration
    
    Biome enabled Git VCS integration.
    
    Next Steps 
    
      1. Setup an editor extension
         Get live errors as you type and format when you save.
         Learn more at https://biomejs.dev/editors/first-party-extensions/
    
      2. Try a command
         biome check  checks formatting, import sorting, and lint rules.
         biome --help displays the available commands.
    
      3. Migrate from ESLint and Prettier
         biome migrate eslint   migrates your ESLint configuration to Biome.
         biome migrate prettier migrates your Prettier configuration to Biome.
    
      4. Read the documentation
         Find guides and documentation at https://biomejs.dev/guides/getting-started/
    
      5. Get involved with the community
         Ask questions and contribute on GitHub: https://github.com/biomejs/biome
         Seek for help on Discord: https://biomejs.dev/chat
  
  

```
